--- a/src/app/header/healthboard-header.component.html
+++ b/src/app/header/healthboard-header.component.html
@@ -14,6 +14,7 @@
          
           <!--<li class=""><a routerLink="/dashboard">Dashboard</a></li>-->
 		  <li class=""><a routerLink="/dashboard">Dashboard</a></li>
+		   <!--<li class=""><a routerLink="/home">Home</a></li>-->
           <!--<li class=""><a routerLink="/add-application">Add Application</a></li>
           -->
           
