--- a/src/app/healthboard/dashboard/healthboard.component.html
+++ b/src/app/healthboard/dashboard/healthboard.component.html
@@ -34,7 +34,7 @@
         <div class="col-sm-12 control-label">
           <ul class="breadcrumb">
             
-			<li>DashBoard</li>
+			<li>Applications</li>
             <!--<li class="active">Add User</li>-->
           </ul>
         </div>
